# my_nav_test

./: CMakeLists.txt  README.md  package.xml
config/fake/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
launch/: amcl_demo_copy.launch  fake_move_base_playground.launch  view_navigation.launch
rviz/: navigation.rviz
