<?xml version="1.0"?>
<package format="2">
  <name>my_nav_test</name>
  <version>0.0.0</version>
  <description>The my_nav_test package</description>
    

  <maintainer email="wangzhao9562@gmail.com">wz9562</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>turtlebot_gazebo</build_depend>
  <build_depend>turtlebot_navigation</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscppy</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscppy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot_gazebo</exec_depend>
  <exec_depend>turtlebot_navigation</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscppy</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
